--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Your Website Title</title>
+</head>
+<body>
+    <header>
+        <h1>Lukáš Mikšovský</h1>
+        <p>THE LONELY STONER</p>
+    </header>
 
+    <section>
+        <h2>About Me</h2>
+        <p>Welcome to my website!.</p>
+    </section>
+
+    <section>
+        <h2>My Projects</h2>
+        <!-- Add your projects here -->
+    </section>
+
+    <footer>
+        <p>Contact me at: your.email@example.com</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
