--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>ICE SPICE NO1 FAN</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +19,8 @@
 
     <!-- Welcome Section -->
     <section id="welcome-section">
-        <h1>Hey, I'm [Your Name]</h1>
-        <p><i>A front-end web developer</i></p>
+        <h1>Hey, I'm Lukáš</h1>
+        <p><i>Not a front-end web developer</i></p>
     </section>
 
     <!-- Projects Section (You can add your projects here) -->
@@ -36,7 +36,7 @@
 
     <!-- Contact Section -->
     <footer id="contact">
-        <p>Contact me at [your email or other contact info]</p>
+        <p>DO NOT CONTACT ME</p>
     </footer>
 </body>
 </html>
