updated the index to link the other pages

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <!-- Navigation Menu -->
     <nav id="navbar" class="nav">
         <ul>
-            <li><a href="#welcome-section">About</a></li>
-            <li><a href="#projects">Work</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
     <!-- Welcome Section -->
     <section id="welcome-section">
         <h1>Hey, I'm Lukáš</h1>
-        <p><i>Not a front-end web developer</i></p>
+        <p><i>NOT a front-end web developer</i></p>
     </section>
 
     <!-- Projects Section (You can add your projects here) -->
@@ -36,7 +37,7 @@
 
     <!-- Contact Section -->
     <footer id="contact">
-        <p>DO NOT CONTACT ME</p>
+        <p>DO NOT CONTACT ME PLEASE RESPECT MY PRIVACY</p>
     </footer>
 </body>
 </html>
