--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ICE SPICE NO1 FAN</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
     <!-- Navigation Menu -->
@@ -27,6 +28,16 @@
     <!-- Projects Section (You can add your projects here) -->
     <section id="projects" class="project-section">
         <h2 class="projects-section-header">My Projects</h2>
+        <p>Tady zatím nic není.<br> To je smutné :(<br> Achjo.<br> Třeba se něco změní.</p>
+        <hr>
+        <p>Tady taky nic není.<br> skoda...</p>
+        <hr>
+        <pre>Toto je prefabrikat.
+            PISMENKA
+            SLOVA
+                FIXED-WIDTH FONT
+
+        </pre>
         <!-- Add your project tiles here -->
         <!-- Example: -->
         <!-- <div class="project project-tile">
